<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/de"
        android:textSize="22sp"/>

    <Spinner
        android:layout_marginHorizontal="20dp"
        android:background="#f5f5f5"
        android:id="@+id/spFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/para"
        android:textSize="22sp"
        android:layout_marginTop="10dp"/>

    <Spinner
        android:layout_marginHorizontal="20dp"
        android:background="#f5f5f5"
        android:id="@+id/spTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_marginTop="25dp"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor"
        android:layout_gravity="center"
        android:layout_marginHorizontal="50dp"
        android:textSize="22sp"
        android:textAlignment="center"/>

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/etValueFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:minWidth="80dp"
        android:hint="@string/digite_o_valor"
        android:textAlignment="center"
        android:layout_marginHorizontal="70dp"/>

    <Button
        android:paddingVertical="15dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:id="@+id/btConvert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/converter" />

    <TextView
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        android:text="@string/resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="22sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>


